error.3.txt
cmake --build build --config Debug
[1/2] Building CXX object CMakeFiles/quantity_concepts.dir/Debug/quantity_concepts.cpp.o
FAILED: CMakeFiles/quantity_concepts.dir/Debug/quantity_concepts.cpp.o 
/usr/bin/c++ -DCMAKE_INTDIR=\"Debug\" -isystem /home/cclark/.conan2/p/cd3-b7e3590cfe062b/p/include -isystem /home/cclark/.conan2/p/boost4323486387342/p/include -m64 -g -std=gnu++20 -MD -MT CMakeFiles/quantity_concepts.dir/Debug/quantity_concepts.cpp.o -MF CMakeFiles/quantity_concepts.dir/Debug/quantity_concepts.cpp.o.d -o CMakeFiles/quantity_concepts.dir/Debug/quantity_concepts.cpp.o -c /home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp: In function ‘int main()’:
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:81:29: error: no matching function for call to ‘area3<boost::units::t::cm_p2>(boost::units::quantity<boost::units::unit<boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::meter_base_unit, boost::units::scale<10, boost::units::static_rational<-2> > >, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void> >&, boost::units::quantity<boost::units::unit<boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::second_base_unit, boost::units::scale<10, boost::units::static_rational<-3> > >, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void> >&)’
   81 |     auto A = area3<t::cm_p2>(L, t);
      |              ~~~~~~~~~~~~~~~^~~~~~
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:47:13: note: candidate: ‘template<class R, class U1, class U2>  requires (Area<R>) && (Length<U1>) && (Length<U2>) boost::units::quantity<R> area3(boost::units::quantity<U1>, boost::units::quantity<U2>)’
   47 | quantity<R> area3(quantity<U1> a_L, quantity<U2> a_W)
      |             ^~~~~
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:47:13: note:   template argument deduction/substitution failed:
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:47:13: note: constraints not satisfied
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp: In substitution of ‘template<class R, class U1, class U2>  requires (Area<R>) && (Length<U1>) && (Length<U2>) boost::units::quantity<R> area3(boost::units::quantity<U1>, boost::units::quantity<U2>) [with R = boost::units::unit<boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<2> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::meter_base_unit, boost::units::scale<10, boost::units::static_rational<-2> > >, boost::units::static_rational<2> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<2> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void>; U1 = boost::units::unit<boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::meter_base_unit, boost::units::scale<10, boost::units::static_rational<-2> > >, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void>; U2 = boost::units::unit<boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::second_base_unit, boost::units::scale<10, boost::units::static_rational<-3> > >, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void>]’:
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:81:29:   required from here
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:20:9:   required for the satisfaction of ‘Length<U2>’ [with U2 = boost::units::unit<boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::second_base_unit, boost::units::scale<10, boost::units::static_rational<-3, 1> > >, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void>]
/home/cclark/Code/sync/Experiment/c++20/concepts/quantity_concepts.cpp:20:50: note: the expression ‘have_same_dimensions<U, boost::units::unit<boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::meter_base_unit, boost::units::scale<10, boost::units::static_rational<-2, 1> > >, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::length_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void> >::value [with U = boost::units::unit<boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::heterogeneous_system<boost::units::heterogeneous_system_impl<boost::units::list<boost::units::heterogeneous_system_dim<boost::units::scaled_base_unit<boost::units::si::second_base_unit, boost::units::scale<10, boost::units::static_rational<-3, 1> > >, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::list<boost::units::dim<boost::units::time_base_dimension, boost::units::static_rational<1, 1> >, boost::units::dimensionless_type>, boost::units::dimensionless_type> >, void>]’ evaluated to ‘false’
   20 | concept Length = have_same_dimensions<U, t::cm>::value;
      |                                                  ^~~~~
ninja: build stopped: subcommand failed.
